Dev test passed with DQ Maven tests passed with DQ
Added
  Spark external execution
  DQ Config
  Foreign key reference configuration
  SparkSQLTransformation
Renamed
 dataStore to dataSource
 project yo nameSpace
Changed
 dataSource stricture
 tests and configs